@@ -1,3 +1,6 @@
+ * Fixed input handling for requests without body that nevertheless try
+   to read one (e.g. mod_cgid handling) to deliver at least an EOS bucket
+   before signalling an EOF.
  * A regression in v1.15.24 was fixed that could lead to httpd child
    processes not being terminated on a graceful reload or when reaching
    MaxConnectionsPerChild. When unprocessed h2 requests were queued at
